--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistrationScreen"></activity>
-        <activity android:name=".LoginScreen" />
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@drawable/background_color" />
+
+        <activity android:name=".RegistrationScreen" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
